Refactor keybinds to recognize find-definitions

--- a/config.org
+++ b/config.org
@@ -20,7 +20,7 @@
 * Custom Configs
 
 #+begin_src emacs-lisp
-(setq orbit/theme           'doom-ayu-mirage
+(setq orbit/theme           'doom-dark+
       orbit/font-family     "Fira Code"
       orbit/font-size       14
       orbit/project-folders '("~/dev/nu" "~/dev/projects"))
@@ -50,6 +50,24 @@
 (require 'use-package)
 (setq use-package-always-ensure t)
 #+end_src
+* Custom Commands
+** Treemacs
+
+#+begin_src emacs-lisp
+(defun orbit/treemacs-toggle ()
+  (interactive)
+  (if (and (fboundp 'treemacs-current-visibility)
+                      (eq (treemacs-current-visibility) 'visible))
+    (treemacs)
+    (treemacs-display-current-project-exclusively)))
+
+(defun orbit/treemacs-show-current-project ()
+  (interactive)
+  (when (and (fboundp 'treemacs-current-visibility)
+                      (eq (treemacs-current-visibility) 'visible)) 
+    (treemacs-display-current-project-exclusively)))
+#+end_src
+
 * Env
 ** Load env configurations
 
@@ -168,8 +186,13 @@ Edit code in the same way that in the vim editor.
   ;; Set a default evil mode for some emacs modes
   (evil-set-initial-state 'messages-buffer-mode 'normal)
   (evil-set-initial-state 'dashboard-mode 'normal))
+#+end_src
 
-;; Set of evil keybinds for many commum packages
+** Evil collection
+
+Set of evil keybinds for many commum packages
+
+#+begin_src emacs-lisp
 (use-package evil-collection
   :after evil
   :config
@@ -242,6 +265,8 @@ Autocomplite package that suggest completitions candidates.
 
 Language Server Protocol that supports multiples programming languages.
 
+*** Mode
+
 #+begin_src emacs-lisp
 (use-package lsp-mode
   :commands (lsp lsp-deferred)
@@ -250,17 +275,29 @@ Language Server Protocol that supports multiples programming languages.
 	lsp-modeline-diagnostics-enable t
 	lsp-lens-enable t)
   (lsp-enable-which-key-integration t))
+#+end_src
 
+*** UI
+
+#+begin_src emacs-lisp
 (use-package lsp-ui
   :hook (lsp-mode . lsp-ui-mode)
   :config
   (setq lsp-ui-doc-delay 5
 	lsp-ui-doc-position 'at-point))
+#+end_src
 
+*** Ivy
+
+#+begin_src emacs-lisp
 (use-package lsp-ivy
   :after lsp
   :commands lsp-ivy-workspace-symbol)
+#+end_src
 
+*** Treemacs
+
+#+begin_src emacs-lisp
 (use-package lsp-treemacs
   :after lsp)
 #+end_src
@@ -269,6 +306,8 @@ Language Server Protocol that supports multiples programming languages.
 
 It Checks problems on the code on the fly during the development.
 
+*** Mode
+
 #+begin_src emacs-lisp
 (use-package flycheck
   :after lsp
@@ -276,12 +315,20 @@ It Checks problems on the code on the fly during the development.
   :hook (prog-mode . flycheck-mode)
   :config
   (defalias 'flycheck-show-error-at-point-soon 'flycheck-show-error-at-point))
+#+end_src
 
+*** Popup
+
+#+begin_src emacs-lisp
 (use-package flycheck-popup-tip
   :after flycheck
   :hook
   (flycheck-mode . flycheck-popup-tip-mode))
+#+end_src
 
+*** Kondo
+
+#+begin_src emacs-lisp
 (use-package flycheck-clj-kondo
   :after flycheck)
 #+end_src
@@ -299,6 +346,7 @@ eg: *<shortcut TAB*
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
   (add-to-list 'org-structure-template-alist '("clj" . "src clojure")))
 #+end_src
+
 ** Config
 
 #+begin_src emacs-lisp
@@ -344,6 +392,8 @@ This allows replacing the headers from org-mode to display a different char for 
 
 It Helps to manager workspaces for each project
 
+*** Mode
+
 #+begin_src emacs-lisp
 (use-package projectile
   :diminish projectile-mode
@@ -356,30 +406,24 @@ It Helps to manager workspaces for each project
        (seq-filter 'file-directory-p)
        (setq projectile-project-search-path))
   (setq projectile-switch-project-action #'projectile-dired))
+#+end_src
 
+*** Counsel
+
+#+begin_src emacs-lisp
 (use-package counsel-projectile
   :after (counsel projectile)
   :config
   (counsel-projectile-mode))
 #+end_src
+
 ** Treemacs
 
 Show a buffer with the project folder tree on the left side
 
+*** Mode
+
 #+begin_src emacs-lisp
-(defun orbit/treemacs-toggle ()
-  (interactive)
-  (if (and (fboundp 'treemacs-current-visibility)
-                      (eq (treemacs-current-visibility) 'visible))
-    (treemacs)
-    (treemacs-display-current-project-exclusively)))
-
-(defun orbit/treemacs-show-current-project ()
-  (interactive)
-  (when (and (fboundp 'treemacs-current-visibility)
-                      (eq (treemacs-current-visibility) 'visible)) 
-    (treemacs-display-current-project-exclusively)))
-
 (use-package treemacs
   :defer t
   :hook (projectile-after-switch-project . orbit/treemacs-show-current-project)
@@ -390,13 +434,25 @@ Show a buffer with the project folder tree on the left side
   (treemacs-follow-mode t)
   (treemacs-filewatch-mode t)
   (treemacs-fringe-indicator-mode 'always))
+#+end_src
 
+*** Evil
+
+#+begin_src emacs-lisp
 (use-package treemacs-evil
   :after (treemacs evil))
+#+end_src
 
+*** Projectile
+
+#+begin_src emacs-lisp
 (use-package treemacs-projectile
   :after (treemacs projectile))
+#+end_src
 
+*** Magit
+
+#+begin_src emacs-lisp
 (use-package treemacs-magit
   :after (treemacs magit))
 #+end_src
@@ -418,6 +474,8 @@ Show a buffer with the project folder tree on the left side
 
 Generic completition mechanism for emacs
 
+*** Mode
+
 #+begin_src emacs-lisp
 (use-package ivy
   :diminish
@@ -438,19 +496,29 @@ Generic completition mechanism for emacs
    ("C-d" . ivy-reverse-i-search-kill))
   :config
   (ivy-mode 1))
+#+end_src
 
-;; Completition improvements
+*** Rich
+
+#+begin_src emacs-lisp
 (use-package ivy-rich
   :after ivy
   :init
   (ivy-rich-mode 1))
+#+end_src
 
+*** Prescient
+
+#+begin_src emacs-lisp
 (use-package ivy-prescient
   :after ivy
   :config
   (ivy-prescient-mode 1))
+#+end_src
 
-;; Make easy to find shortcuts
+** Which Key
+
+#+begin_src emacs-lisp
 (use-package which-key
   :defer 0
   :diminish which-key-mode
@@ -461,11 +529,17 @@ Generic completition mechanism for emacs
 
 * Programming Languages
 ** Clojure
+
+*** Mode
 #+begin_src emacs-lisp
 (use-package clojure-mode
   :defer t
   :hook (clojure-mode . lsp-deferred))
+#+end_src
 
+*** Cider
+
+#+begin_src emacs-lisp
 (use-package cider
   :commands cider-mode
   :hook
@@ -473,6 +547,7 @@ Generic completition mechanism for emacs
   :config
   (setq cider-repl-use-clojure-font-lock t))
 #+end_src
+
 * Source Control
 ** Magit
 
@@ -510,6 +585,7 @@ Display the elisp documentation in a better way and with more information
 (use-package general
   :after evil)
 #+end_src
+
 ** Global
 #+begin_src emacs-lisp
 (general-define-key
@@ -523,9 +599,10 @@ Display the elisp documentation in a better way and with more information
  "<escape>" 'transient-quit-one)
 
 (general-define-key
- :keymaps 'evil-normal-state-map 
- "gd"     '(lsp-ui-peek-find-definitions :which-key "Find definition")
- "gD"     '(lsp-ui-peek-find-references  :which-key "Find references"))
+ :keymaps 'lsp-mode-map
+ [remap evil-goto-defintion]          'lsp-ui-peek-find-definitions
+ "gD"     '(lsp-ui-peek-find-references  :which-key "Find references")
+ "gd"     '(lsp-ui-peek-find-definitions :which-key "Find definitions"))
 #+end_src
 ** Leader
 
@@ -645,6 +722,11 @@ Display the elisp documentation in a better way and with more information
   "eb" '(cider-eval-buffer                           :which-key "Evaluate buffer")
   "er" '(cider-eval-region                           :which-key "Evaluate region")
   "ee" '(cider-eval-last-sexp                        :which-key "Evaluate last expression")
+  "j"  '(:ignore t                                   :which-key "jack")
+  "ji" '(cider-jack-in                               :which-key "Start repl")
+  "jj" '(cider-jack-in-clj                           :which-key "Start clojure repl")
+  "jI" '(cider-jack-in-cljs                          :which-key "Start clojurescript repl")
+  "jJ" '(cider-jack-in-clj&cljs                      :which-key "Start clojure and clojurescript repl")
   "l"  '(:ignore t                                   :which-key "load")
   "lb" '(cider-load-buffer                           :which-key "Load buffer")
   "ls" '(cider-load-buffer-and-switch-to-repl-buffer :which-key "Loan buffer on repl")
@@ -658,13 +740,6 @@ Display the elisp documentation in a better way and with more information
   "tn" '(cider-test-run-ns-tests                     :which-key "Run namespace tests")
   "tp" '(cider-test-run-project-tests                :which-key "Run project tests")
   "tl" '(cider-test-run-loaded-tests                 :which-key "Run loaded tests"))
-
-(orbit/language-key
-  "j"  '(:ignore t                                   :which-key "jack")
-  "ji" '(cider-jack-in                               :which-key "Start repl")
-  "jj" '(cider-jack-in-clj                           :which-key "Start clojure repl")
-  "jI" '(cider-jack-in-cljs                          :which-key "Start clojurescript repl")
-  "jJ" '(cider-jack-in-clj&cljs                      :which-key "Start clojure and clojurescript repl"))
 
 (orbit/language-key
   :keymaps 'cider-repl-mode-map 
@@ -689,33 +764,39 @@ Display the elisp documentation in a better way and with more information
   "g" '(magit-status :which-key "Git status"))
 #+end_src
 
-** Tools
+** Helper
 
 #+begin_src emacs-lisp
-(general-create-definer orbit/tools-key
-    :states '(normal visual emacs treemacs)
-    :prefix "SPC t")
-
-(general-create-definer orbit/open-key
-    :states  '(normal visual emacs treemacs)
-    :keymaps 'override
-    :prefix  "SPC o")
-
 (general-create-definer orbit/helper-key
     :states  '(normal visual emacs treemacs)
     :prefix  "SPC h")
-
-(orbit/tools-key
-  ""   '(:ignore t             :which-key "tools")
-  "t"  '(counsel-load-theme    :which-key "Load theme"))
-
-(orbit/open-key
-    "p"   '(orbit/treemacs-toggle                       :which-key "Toggle project sidebar"))
 
 (orbit/helper-key
     ""   '(:ignore t                  :which-key "help")
     "f"  '(counsel-describe-function  :which-key "Describe function")
     "v"  '(counsel-describe-variable  :which-key "Describe variable")
     "s"  '(counsel-describe-symbol    :which-key "Describe symbol"))
+#+end_src
+
+** Apps
+#+begin_src emacs-lisp
+(general-create-definer orbit/open-key
+    :states  '(normal visual emacs treemacs)
+    :keymaps 'override
+    :prefix  "SPC o")
+
+(orbit/open-key
+    "p"   '(orbit/treemacs-toggle                       :which-key "Toggle project sidebar"))
+#+end_src
+
+** Tools
+#+begin_src emacs-lisp
+(general-create-definer orbit/tools-key
+    :states '(normal visual emacs treemacs)
+    :prefix "SPC t")
+
+(orbit/tools-key
+  ""   '(:ignore t             :which-key "tools")
+  "t"  '(counsel-load-theme    :which-key "Load theme"))
 #+end_src
 
